--- a/e/alt/code/403.html
+++ b/e/alt/code/403.html
@@ -25,6 +25,6 @@ article {
 </style>
 </head>
 <body>
-<article>403 - Forbidden<article>
+<article><h1>403 - Forbidden</h1></article>
 </body>
 </html>
