--- a/e/alt/code/404.html
+++ b/e/alt/code/404.html
@@ -25,6 +25,6 @@ article {
 </style>
 </head>
 <body>
-<article>404 - Not Found<article>
+<article><h1>404 - Not Found</h1></article>
 </body>
 </html>
