--- a/e/alt/code/500.html
+++ b/e/alt/code/500.html
@@ -25,6 +25,6 @@ article {
 </style>
 </head>
 <body>
-<article>500 - Server Error<article>
+<article><h1>500 - Server Error</h1></article>
 </body>
 </html>
