--- a/e/alt/code/401.html
+++ b/e/alt/code/401.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>503 - Service Unavailable</title>
+<title>401 - Unauthorized</title>
 <style>
 html {
 	padding: 10px;
@@ -25,6 +25,6 @@ article {
 </style>
 </head>
 <body>
-<article><h1>503 - Service Unavailable</h1></article>
+<article><h1>401 - Unauthorized</h1></article>
 </body>
 </html>
