--- a/r/response-code/404.html
+++ b/r/response-code/404.html
@@ -25,6 +25,18 @@ article {
 </style>
 </head>
 <body>
-<article><h1>404 - Not Found</h1></article>
+<article>
+
+<h1>404 - Not Found</h1>
+
+<p>Sorry, the document you requested is not available. Here are some steps you may try to find the page you were looking for:</p>
+
+<ul>
+<li>If you typed the URL by hand then please make sure that it is exactly as it should be. Also check the capitalization and that you are using forward slashes ( / ).</li>
+<li>If you are looking for information on a particular subject, please start on the <a ref="/">Home page</p> or <a href="/site-map/">Site Map</li>.
+<li>Try searching the site using the search box at the top of this page. If there is none, then try searching this site using the following as an example: `your search terms site:this-site-domain.ca`</li>
+</ul>
+
+</article>
 </body>
 </html>
