--- a/e/sgl/device/discussion.html
+++ b/e/sgl/device/discussion.html
@@ -19,6 +19,7 @@ The only thing that is different is the type of thinking that is used to create
 the page and the intent for which it is created.</p>
 </div>
 </article>
+<nav><a href="../">^</nav>
 </main>
 <script src="prototype.js"></script>
 </body>
